[gd_scene load_steps=5 format=3 uid="uid://go610umh62du"]

[ext_resource type="Script" uid="uid://djcosmixujjoc" path="res://Scripts/farm.gd" id="1_30eac"]
[ext_resource type="Texture2D" uid="uid://vbktxr4tjsdo" path="res://Assets/UI/valid-placement-sprite.png" id="2_78d4p"]
[ext_resource type="Texture2D" uid="uid://dbqd2vkeyqkwp" path="res://Assets/UI/invalid-placement.png" id="3_xrnc3"]
[ext_resource type="Texture2D" uid="uid://dqda6onop1s0g" path="res://Assets/Buildings/farm.png" id="4_dojjk"]

[node name="Farm" type="Node2D"]
script = ExtResource("1_30eac")

[node name="ValidPlacementSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_78d4p")

[node name="InvalidPlacementSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xrnc3")

[node name="BuildingSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_dojjk")
offset = Vector2(0, -8)

[node name="ProductionTimer" type="Timer" parent="."]
